--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ scikit-learn = "^1.1.1"
 umap-learn = "^0.5.1"
 anytree = "^2.8.0"
 pkg = {path = "pkg", develop = true}
-graspologic = {path = "../graspologic", develop = true}
+graspologic = {path = "../graspologic", develop = true, extras = ["dev"]}
 giskard-toolbox = {path = "../giskard", develop = true}
 statsmodels = "^0.13.0"
 jupyter-client = "6.1.12" # https://github.com/jupyter/jupyter_client/issues/637
@@ -27,3 +27,4 @@ jupyter-book = "^0.12.1"
 jupytext = "^1.13.8"
 ghp-import = "^2.0.1"
 ipykernel = "^6.6.0"
+sphinx-rtd-theme = "^1.0.0"
