--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,18 +12,22 @@ anytree = "^2.8.0"
 pkg = {path = "pkg", develop = true}
 graspologic = {path = "../graspologic", develop = true, extras = ["dev"]}
 giskard-toolbox = {path = "../giskard", develop = true}
+neuropull = {path = "../neuropull", develop = true}
 statsmodels = "^0.13.0"
 jupyter-client = "6.1.12" # https://github.com/jupyter/jupyter_client/issues/637
 svgutils = "^0.3.4"
 navis = "^1.2.1"
 python-catmaid = "^2.0.6"
+networkx = "<3.0" # capped from graspologic not being compatible
+numpy = "<1.24.0" # capped from numba issue
+
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
 flake8 = "^3.9.2"
 rope = "^0.20.1"
 jupyter = "^1.0.0"
-jupyter-book = "^0.12.1"
+jupyter-book = "^0.13.0"
 jupytext = "^1.13.8"
 ghp-import = "^2.0.1"
 ipykernel = "^6.6.0"
