shell of some data wrangling code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ navis = "^1.2.1"
 python-catmaid = "^2.0.6"
 networkx = "<3.0" # capped from graspologic not being compatible
 numpy = "<1.24.0" # capped from numba issue
+pandas = {extras = ["feather"], version = "^2.0.0"}
 
 
 [tool.poetry.dev-dependencies]
